# UnleashedRecomp

./: .gitignore  .gitmodules  1364.patch  1449.patch  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  nilton.patch  update_submodules.bat  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: apply-patch.yml  build-flatpak.yml  build-linux.yml  build-windows.yml  build.yml  validate-external.yml  validate-internal.yml  validate.yml
UnleashedRecomp/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  config_detail.h  exports.cpp  exports.h  main.cpp  misc_impl.cpp  stdafx.h
UnleashedRecomp/api/: SWA.h  SWA.inl
UnleashedRecomp/apu/: audio.cpp  embedded_player.cpp
UnleashedRecomp/cfg/: config.cpp  config.h  config_detail.cpp  config_detail.h  config_locale.h
UnleashedRecomp/cpu/: code_cache.cpp  guest_stack_var.h  guest_thread.cpp  guest_thread.h
UnleashedRecomp/gpu/: imgui_common.h  imgui_font_builder.cpp  imgui_snapshot.cpp  imgui_snapshot.h  video.cpp  video.h
UnleashedRecomp/hid/: hid.cpp  hid.h
UnleashedRecomp/install/: installer.cpp  installer.h  update_checker.cpp  update_checker.h
UnleashedRecomp/kernel/: function.h  imports.cpp  memory.cpp  memory.h  xam.cpp  xam.h  xdm.h
UnleashedRecompLib/: CMakeLists.txt
docs/: BUILDING-ALT.md  BUILDING.md  DUMPING-en-usb.md  DUMPING-en.md
flatpak/: io.github.hedge_dev.unleashedrecomp-Flatpak-Debug.json  io.github.hedge_dev.unleashedrecomp.json  io.github.hedge_dev.unleashedrecomp.metainfo.xml
tools/file_to_c/: CMakeLists.txt  file_to_c.cpp
(+218 files in other folders)
